# iGAM

./: CMakeLists.txt  README.md  vcpkg.json
data/: testbauteil_nachz_ausgerichtet_negativz.off
data/machines/millingmachines/: WagnerWFZ360V.json
data/rawmaterial/: material3.json  material40.json  material52.json
resources/: config.json  hanpart.off  oversized.off
resources/data/machines/millingmachines/: FlatEnd_D3mm_L175mm.stl  millingtool_flatend.off  millingtool_flatend_smaller.off
source/: main.cpp
source/modules/: CMakeLists.txt
source/modules/geometrypreprocessing/: CMakeLists.txt  alignGeometry.cpp  alignGeometry.h  geometrySlicing.cpp  geometrySlicing.h
source/modules/io/: CMakeLists.txt  config.cpp  config.h  dump_to_eps.h  fileio.cpp  fileio.h  machineloader.cpp  machineloader.h
source/modules/millingmachine/: CMakeLists.txt  computeOffset.cpp  computeOffset.h  manufacturabilityAnalysis.cpp  manufacturabilityAnalysis.h  millingMachine.cpp  millingMachine.h  millingTool.cpp  millingTool.h  positioningMillingTool.cpp  positioningMillingTool.h  removableVolume.cpp  removableVolume.h
source/modules/misc/: CMakeLists.txt  enums.h  helpFunctions.cpp  helpFunctions.h
source/modules/rawmaterial/: CMakeLists.txt  rawMaterial.cpp  rawMaterial.h  rawMaterialLoader.cpp  rawMaterialLoader.h  rawMaterialSelection.cpp  rawMaterialSelection.h
